//this gets persisted - should be backward compatible, do not break!
syntax = "proto3";

package com.virtuslab.phototrip.worldmap.domain;

message WorldMapState {
  string map_id = 1;
  string creator_id = 2;
  string description = 3;
}
